syntax = "proto3";
package proto;

option go_package = "./proto";

import "common.proto";

message RogueTalents {
	// Assassination
	int32 improved_eviscerate = 1;
	int32 remorseless_attacks = 2;
	int32 malice = 3;
	int32 ruthlessness = 4;
	int32 murder = 5;
	int32 improved_slice_and_dice = 6;
	bool relentless_strikes = 7;
	int32 improved_expose_armor = 8;
	int32 lethality = 9;
	int32 vile_poisons = 10;
	int32 improved_poisons = 11;
	bool cold_blood = 12;
	int32 improved_kidney_shot = 13;
	int32 seal_fate = 14;
	bool vigor = 15;

	// Combat
	int32 improved_gouge = 16;
	int32 improved_sinister_strike = 17;
	int32 lightning_reflexes = 18;
	int32 improved_backstab = 19;
	int32 deflection = 20;
	int32 precision = 21;
	int32 endurance = 22;
	bool riposte = 23;
	int32 improved_sprint = 24;
	int32 improved_kick = 25;
	int32 dagger_specialization = 26;
	int32 dual_wield_specialization = 27;
	int32 mace_specialization = 28;
	bool blade_flurry = 29;
	int32 sword_specialization = 30;
	int32 fist_weapon_specialization = 31;
	int32 weapon_expertise = 32;
	int32 aggression = 33;
	bool adrenaline_rush = 34;

	// Subtlety
	int32 master_of_deception = 35;
	int32 opportunity = 36;
	int32 sleight_of_hand = 37;
	int32 elusiveness = 38;
	int32 camouflage = 39;
	int32 initiative = 40;
	bool ghostly_strike = 41;
	int32 improved_ambush = 42;
	int32 setup = 43;
	int32 improved_sap = 44;
	int32 serrated_blades = 45;
	int32 heightened_senses = 46;
	bool preparation = 47;
	int32 dirty_deeds = 48;
	bool hemorrhage = 49;
	int32 deadliness = 50;
	bool premeditation = 51;
}

message Rogue {
	message Rotation {
	}
	
	message Options {
		UnitReference tricks_of_the_trade_target = 1;
		enum PoisonImbue {
			NoPoison = 0;
			InstantPoison = 1;
			DeadlyPoison = 2;
			WoundPoison = 3;
		}
		PoisonImbue mh_imbue = 2;
		PoisonImbue oh_imbue = 3;
		int32 starting_overkill_duration = 4;
		bool apply_poisons_manually = 5;
		int32 honor_of_thieves_crit_rate = 6;
		bool assume_bleed_active = 7;
		float vanish_break_time = 8;
	}
	Options options = 3;
}
